<resources>
    <string name="app_name">Salonspot</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">Sign In</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="menu_refresh">Refresh</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">Sign Up</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <string-array name="array_name">
        <item>Hair</item>
        <item>Nails</item>
        <item>Spa</item>
        <item>Facial</item>
        <item>Skin</item>
    </string-array>

    <string-array name="Sorttype">
        <item>All</item>
        <item>Ratings</item>
        <item>Location</item>

    </string-array>

</resources>
